--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -7,6 +7,7 @@
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{enumitem}
+\usepackage{hyperref}
 \usepackage[top=2cm, bottom=2cm, left=2cm, right=2cm]{geometry}
 
 \usepackage{fancyhdr}
@@ -437,6 +438,7 @@ Si le client a été auparavant banni par le serveur.
 	
 
 	\subparagraph{Interface graphique bannissement \& suppression}\label{del} 
+	\begin{enumerate}
 		\item Le pop-up doit contenir deux case à cocher :
 			\begin{enumerate}[label=\arabic*.]
 				\item Une case alignée avec le texte "Supprimer le compte"
