--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -7,7 +7,6 @@
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{enumitem}
-\usepackage{hyperref}
 \usepackage[top=2cm, bottom=2cm, left=2cm, right=2cm]{geometry}
 
 \usepackage{fancyhdr}
@@ -400,9 +399,9 @@ Si le client a été auparavant banni par le serveur.
 		\item Deux boutons seront présent en bas de cette zone.
 			\begin{enumerate}[label=\arabic*.]
 				\item Un bouton en bas a droite avec un "-" rouge dedans.\label{bgr} 
-				\item Au clic sur le bouton "-" un pop-up s'ouvrira. Voir \hyperref[del]{\ref{del}} Page : \pageref{del}
+				\item Au clic sur le bouton "-" un pop-up s'ouvrira. Voir \ref{del} Page : \pageref{del}
 				\item Un bouton en bas a gauche avec un "+" vert dedans.\label{bdv}
-				\item Au clic sur le bouton "+" un pop-up s'ouvrira. Voir \hyperref[add]{\ref{add}} Page : \pageref{add}
+				\item Au clic sur le bouton "+" un pop-up s'ouvrira. Voir \ref{add} Page : \pageref{add}
 			\end{enumerate} 
 		\item Les comptes temporaires seront souligné dans la zone gauche.
 		\item Le compte Administrateur ne sera pas présent dans cette liste.
@@ -410,7 +409,7 @@ Si le client a été auparavant banni par le serveur.
 		\item Les comptes bannis temporairement seront en gris clair.
 		\item Les comptes bannis partiellement seront en orange.
 		\item Les comptes normaux seront en noir.
-		\item Lors du clic sur un compte, la fenêtre de droite changera, elle contiendra alors les répertoire auquel l'utilisateur sélectionné à accès. Voir \hyperref[chg]{\ref{chg}} Page : \pageref{chg}
+		\item Lors du clic sur un compte, la fenêtre de droite changera, elle contiendra alors les répertoire auquel l'utilisateur sélectionné à accès. Voir \ref{chg} Page : \pageref{chg}
 	\end{enumerate}
 	
 \paragraph{Bannissement d'un compte}
